--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     visible="true" 
     availableLanguages="['es','en']" 
     doingLogin="false"  
-    default-language="es" 
+    default-language="en" 
     secondary-color="#F0F0F0" 
     primary-color="#1D7CE3"   
     id="modal"
