new mode: "modal" | "default"

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     url-to-register="/registro"
     client-app-domain="senator.beds2pro.com"
     api-key="asdadada-asdasd2-ada2-ds"
+    mode ="modal"
     > </login-modal>
 
     <script src="../dist/login-modal.js"></script>
