add env attribute

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
   <body>
 
     <login-modal 
-    visible="true" 
-    language="en" 
-    secondary-color="#F0F0F0" 
-    primary-color="#1D7CE3"   
-    url-to-register="/registro"
-    client-app-domain="senator.beds2pro.com"
-    api-key="asdadada-asdasd2-ada2-ds"
-    mode ="modal"
+      env="dev"
+      visible="true" 
+      language="en" 
+      secondary-color="#F0F0F0" 
+      primary-color="#1D7CE3"   
+      url-to-register="/registro"
+      client-app-domain="senator.beds2pro.com"
+      api-key="asdadada-asdasd2-ada2-ds"
+      mode ="modal"
     > </login-modal>
 
     <script src="../dist/login-modal.js"></script>
