ponemos datos de hotelbrand

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
       secondary-color="#F0F0F0" 
       primary-color="#1D7CE3"   
       url-to-register="/registro"
-      client-app-domain="senator.beds2pro.com"
-      api-key="asdadada-asdasd2-ada2-ds"
+      client-app-domain="hotelbrand.beds2bpro.es"
+      api-key="105d7dda-fdb0-4053-850d-a78f94f7431a"
       mode ="modal"
     > </login-modal>
 
