--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       language="en" 
       secondary-color="#F0F0F0" 
       primary-color="#1D7CE3"   
-      url-to-register="https://hotelbrand.beds2bpro.es/es/registers"
+      url-to-register="https://hotelbrand.beds2bpro.es/es/register"
       client-app-domain="hotelbrand.beds2bpro.es"
       api-key="105d7dda-fdb0-4053-850d-a78f94f7431a"
       mode ="modal"
