--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <login-modal 
       env="dev"
       visible="true" 
-      language="en" 
+      language="es" 
       secondary-color="#F0F0F0" 
       primary-color="#1D7CE3"   
       url-to-register="https://hotelbrand.beds2bpro.es/es/register"
